# lumen

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  package-lock.json  package.json  partitions_example.csv  sdkconfig.defaults
frontend/: .eslintrc  .eslintrc.json  README.md  index.html  package-lock.json  package.json  prettier.config.js  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/: Header.tsx  NavBar.tsx  SportCard.tsx  SportIcons.tsx  UtilityComponents.tsx  UtilityIcons.tsx
frontend/src/pages/: Advertisements.tsx  Games.tsx  Settings.tsx  SportConfig.tsx
main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.cpp  rest_server.c  rest_server.cpp  server.h  soft_ap.cpp  web_server.cpp
main/lumen/: application.cpp  application.h  button.cpp  button.h  display.cpp  display.h  dns_server.cpp  dns_server.h  filesystem.cpp  filesystem.h  rest_server.cpp  rest_server.h  wifi.cpp  wifi.h
main/lumen/net/: README.md  dns_server.cpp  dns_server.h  wifi.cpp  wifi.h
main/lumen/sys/: README.md  button.cpp  button.h  display.cpp  display.h  filesystem.cpp  filesystem.h
main/lumen/web/: README.md  rest_server.cpp  rest_server.h  timer.cpp  timer.h
src/: CMakeLists.txt  Kconfig.projbuild  main.cpp
src/frontend/: package-lock.json  package.json  prettier.config.js  tailwind.config.js  test.js
src/frontend/src/: App.tsx  index.css  index.tsx
src/frontend/src/components/: SportCard.tsx  SportIcons.tsx  UtilityIcons.tsx
src/frontend/src/pages/: Advertisements.tsx  Games.tsx  SportConfig.tsx
src/lumen/: app_task.cpp  app_task.hpp  application.cpp  application.hpp
src/lumen/activity/: activity.hpp  display.cpp  display.hpp  message.cpp  message.hpp  snapshot.cpp  snapshot.hpp
src/lumen/net/: mdns.cpp  mdns.hpp  wifi.cpp  wifi.hpp
src/lumen/web/: server.cpp  server.hpp
src/lumen/web/handler/: root.cpp  root.hpp  start_timer.cpp  start_timer.hpp
